# pygwt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  devbox.json  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json  starship.toml
.github/workflows/: bump.yaml  docs.yaml  lint.yaml
0.3.0/: 404.html  index.html
0.3.0/cli/: index.html
0.3.0/search/: search_index.json
0.3.1/cli/: index.html
0.3.1/search/: search_index.json
0.4.0/: index.html
0.4.0/cli/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html
0.5.0/CHANGELOG/: index.html
0.5.0/search/: search_index.json
dev/: 404.html  index.html
dev/CHANGELOG/: index.html
dev/changelog/: index.html
dev/cli/: index.html
dev/docs/cli/: index.html
dev/search/: search_index.json
docs/: cli.md
latest/CHANGELOG/: index.html
latest/docs/cli/: index.html
src/pygwt/: __main__.py  completions.py  config.py  git.py  log.py  logging.py  misc.py
src/pygwt/cli/: loader.py
src/pygwt/cli/click/: decorators.py
src/pygwt/cli/commands/: __init__.py  clone.py  init.py  install.py  repository.py  shell.py  switch.py  worktree.py
src/pygwt/cli/commands/repository/: __init__.py  list.py  register.py  switch.py
src/pygwt/cli/completions/: functions.py
src/pygwt/completions/: bash.sh  powershell.ps1  zsh.sh
src/pygwt/resources/: bash.sh  powershell.ps1  zsh.sh
